Refactor more metas